# note

./: driver.md  git.md  grub.cfg  linux  linux.md  pico.md  tool.md
8550/: 8550.md  control  dplog.sh  pzlog
algo/: algo.md
c/: CMakeLists.txt  c.md  pzpzdemoCmakeList.txt  test.mk  tips.md
car/: car.md
coderule/: coderule.md
framework/: camerajava.md
hardware/: driver.md  hardware.md  power.md
hardware/qcom/: buffer.md  node.md  note.md
hardware/qcom/8550/: 8550.md  camxchi.md  hdmiOutSum.md
hardware/qcom/bringup/: dtsi.md
kernel/: android.mk  codeKernel.md  do_base_setup.c  drm.md  kernel.md  kernel_init.c  linux.md  os.md  rest_init.c  setup_arch.c  start_kernel.c
logic/: ele.md
other/speech/: camxchi.md
qcom/8550/: 8550.md  ipeGmenode.md  ipenode.md
stock/: stock.md
tool/: git.md  network.md  shell.md  tool.md  vim.md
vim/: vim.c
